##############################################################################
# Setup
##############################################################################

include(${PROJECT_SOURCE_DIR}/cmake/Python.cmake)

##############################################################################
# Subdirectories
##############################################################################

add_subdirectory(delphyne)
