##############################################################################
# Directories
##############################################################################

add_subdirectory(agents)
add_subdirectory(backend)
add_subdirectory(roads)
add_subdirectory(gen)
add_subdirectory(protobuf)
add_subdirectory(systems)
add_subdirectory(translations)
add_subdirectory(utility)
add_subdirectory(visualization)
