##############################################################################
# Scripts
##############################################################################

install(
  PROGRAMS
    delphyne-dragway
    delphyne-gazoo
    delphyne-keyop
    delphyne-realtime-rate-changer
    delphyne-road-loader
    delphyne-scriptlets
    delphyne-start-paused
    delphyne-time-bounded
  DESTINATION
    bin
)
